--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bulma": "^0.8.2",
+    "trae": "^1.4.2",
     "vue": "^2.5.11"
   },
   "browserslist": [
@@ -43,6 +44,7 @@
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^2.9.1"
   }
 }
