--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bulma": "^0.8.2",
     "trae": "^1.4.2",
     "vue": "^2.5.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "browserslist": [
     "> 1%",
@@ -25,6 +26,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
